# rust-waterpourign

./: .travis.yml  Cargo.toml  Dockerfile  bench.sh  cov.sh  docker-compose.yml  flame.sh  lint.sh  notes.md  perf.sh
benches/: solvers.rs
results/: perf.json
src/: glass.rs  lib.rs  main.rs  operation.rs  operations.rs  problem.rs  solver.rs  state.rs
src/models/: glass.rs  mod.rs  operations.rs  state.rs
src/solvers/: imp.rs  mod.rs  rec.rs  rec2.rs
waterpouring-bench/: Cargo.toml
waterpouring-bench/benches/: solvers.rs
waterpouring-imp/: Cargo.toml  watch.sh
waterpouring-imp/src/: imp.rs  main.rs
waterpouring-model/: Cargo.toml  lint.sh
waterpouring-model/src/: glass.rs  lib.rs  operations.rs  problem.rs  solver.rs  state.rs
waterpouring-rec/: Cargo.toml
waterpouring-rec/src/: main.rs  rec.rs
waterpouring-rec2/: Cargo.toml
waterpouring-rec2/src/: lib.rs  main.rs  rec2.rs
waterpouring-server/: plop.md
waterpouring-talk/: Cargo.toml  notes.md
waterpouring-talk/src/: main.rs
waterpouring-wasm/: Cargo.toml  LICENSE_MIT  build.sh
waterpouring-wasm/src/: lib.rs  operation.rs  result.rs  step.rs
waterpouring-wasm/tests/: web.rs
waterpouring-wasm/www/: index.html  index.js  package-lock.json  package.json
waterpouring-wasm2/: Cargo.toml  style.css  waterpouring.html
waterpouring-wasm2/src/: lib.rs
