[package]
name = "waterpouring-wasm"
version = "0.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
#wasm-bindgen = "0.2"
waterpouring-model = {path="../waterpouring-model"}
waterpouring-rec = {path="../waterpouring-rec"}
serde = "1.0"
serde_derive = "1.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
